# mimhex

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_clean.sh  cmake_install.cmake
benchmarks/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  hex_benchmark.cpp  sampler_benchmark.cpp
gui/: CMakeLists.txt  cmake.clean
gui/hexgui/: CMakeLists.txt  board_inc.cpp  board_inc.h  game_view.cpp  game_view.h  hexgui.cpp  hexgui.h  manager.cpp  manager.h  mcts_view.cpp  mcts_view.h
gui/libgogui/: BoardScene.cpp  BoardScene.h  BoardView.cpp  Field.cpp  Field.h
gui/test/: CMakeLists.txt  gogui.cpp  main.cpp  manager.cpp  manager.h
implementation/: board.cpp  board.h  board_dim.cpp  board_dim.h  board_location.cpp  board_location.h  board_move.cpp  board_move.h  board_player.cpp  board_player.h  game.cpp  game.h  hextypes.h  mcts_node.cpp  mcts_node.h  mcts_stats.cpp  mcts_stats.h  mcts_tree.cpp  mcts_tree.h  params.cpp  params.h  pattern_data.cpp  pattern_data.h  playout.cpp  protocol.cpp  protocol.h  sampler-inl.h  sampler.cpp  sampler.h  switches.cpp  switches.h  time_manager.cpp  time_manager.h
lib/: absolute_cast.h  auto_pointer.h  gtp.cpp  gtp.hpp  inverse_sqrt.h  mytypes.h  pair.h  random.cpp  random.h  small_set.h  types.h
main/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  hex  hex_benchmark  main.cpp  main_benchmark.cpp  makefile  pattern_strength.data  run  template.data
patterns/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  hash_board-inl.h  hash_board.cpp  hash_board.h  macro_definitions.h  pattern-inl.h  pattern.cpp  pattern.h  rep.h  template-inl.h  template.cpp  template.h
patterns/gathering/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  check_gathering_output  cmake_install.cmake  computePatterns.sh  computePatterns_my.sh  download.sh  game.tmp  games.tgz  gather_and_compute.sh  gather_patterns  gather_patterns.cpp  hash_board-inl_13.h  hash_board_13.cpp  hash_board_13.h  hsgf2gtp.sh  list.txt  players.html
patterns/gathering/players/: players01.html  players02.html  players03.html  players04.html  (+12 more)
patterns/minorization_maximization/: CMakeLists.txt  gammas_calc.cpp  mm.h
patterns/utils/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  hash_gen  hash_generator.cpp  random_pattern_data.cpp  simple_pattern_conv  simple_pattern_conv.cpp  template.data
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  hash_test.cpp  pattern_strength.data  sampler_test.cpp  simple_hash_test  simple_hash_test.cpp  simple_pattern_test  simple_pattern_test.cpp  test
tests/strength_tests/: hex_old_patterns  hex_rave_vanilla  pattern.data
